--- a/index.html
+++ b/index.html
@@ -4,6 +4,18 @@
         <meta charset="UTF-8" />
         <link rel="icon" type="image/svg+xml" href="/vite.svg" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link
+            rel="preload"
+            href="/src/assets/images/barbershop_long.webp"
+            as="image/webp"
+            fetchpriority="high"
+        />
+        <link
+            rel="preload"
+            href="/src/assets/images/barbershop_compact.webp"
+            as="image/webp"
+            fetchpriority="high"
+        />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
