preloading images fixed

--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
         <link
             rel="preload"
             href="/src/assets/images/barbershop_long.webp"
-            as="image/webp"
+            as="image"
             fetchpriority="high"
         />
         <link
             rel="preload"
             href="/src/assets/images/barbershop_compact.webp"
-            as="image/webp"
+            as="image"
             fetchpriority="high"
         />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
